리소스 매니저 원시 포인터 반환하도록 수정 / Skinned mesh 그리기 위한 준비 중
연산 코드는 준비했으니 그래픽스 인터페이스 열리면 내용 채워넣자.

--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -191,6 +191,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\AnimationClip.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\Animator.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\CapsuleCollider.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\DebugManager.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\BoxCollider.h" />
@@ -243,8 +245,12 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Mesh.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Rigidbody.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\SphereCollider.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\SkinnedMeshRenderer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\AnimationClip.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\SkinnedMeshRenderer.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\Animator.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\CapsuleCollider.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\DebugManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Rigidbody.cpp" />
