--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClCompile Include="src\EffectEditorManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\LogSystem.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Inspector_Particle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Inspector_GameObject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GameProcess.h">
@@ -81,6 +90,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\EffectEditorManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LogSystem.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
