--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\Inspector_GameObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MoveTool.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GameProcess.h">
@@ -93,6 +96,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\LogSystem.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveTool.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
